examples/test/testpolicy13310.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13310
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key4: value32
      key8: value16
      key40: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value7
          key0: value18
      podSelector:
        matchLabels:
          key20: value16
          key41: value27
